// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProjectChangeAvatar > With avatar view 1`] = `
<body>
  <div>
    <div
      class="_final-avatar_80dffb"
    >
      <input
        class="_input-load-file_80dffb"
        type="file"
      />
      <div
        class="_final-avatar_80dffb"
      >
        <img
          alt="user avatar"
          class="_final-avatar__img_80dffb"
          src="https://robohash.org/optioofficiabeatae.png?size=50x50&set=set1"
        />
        <button
          class="yc-button yc-button_view_normal yc-button_size_m yc-button_pin_round-round _btn__with-icon_212512 _final-avatar__buttons_80dffb"
          type="button"
        >
          <span
            class="yc-button__text"
          >
            <div
              class="_btn__wrapper_212512"
            >
              <svg
                aria-hidden="true"
                class="yc-icon"
                fill="currentColor"
                height="16"
                stroke="none"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12.238 3.64a1.854 1.854 0 0 0-1.629-1.628l-.8.8a3.367 3.367 0 0 1 1.63 1.628l.799-.8ZM4.74 7.88l3.87-3.868a1.854 1.854 0 0 1 1.628 1.629L6.369 9.51a1.5 1.5 0 0 1-.814.418l-1.48.247.247-1.48a1.5 1.5 0 0 1 .418-.814ZM9.72.78l-2 2-4.04 4.04a3 3 0 0 0-.838 1.628L2.48 10.62a1 1 0 0 0 1.151 1.15l2.17-.36a3 3 0 0 0 1.629-.839l4.04-4.04 2-2c.18-.18.28-.423.28-.677A3.353 3.353 0 0 0 10.397.5c-.254 0-.498.1-.678.28ZM2.75 13a.75.75 0 0 0 0 1.5h10.5a.75.75 0 0 0 0-1.5H2.75Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </svg>
              change
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProjectChangeAvatar > Without avatar view 1`] = `
<body>
  <div>
    <div
      class="_final-avatar_80dffb"
    >
      <input
        class="_input-load-file_80dffb"
        type="file"
      />
      <div
        class="_final-avatar_80dffb"
      >
        <img
          alt="user avatar"
          class="_final-avatar__img_80dffb"
          src="https://robohash.org/optioofficiabeatae.png?size=50x50&set=set1"
        />
        <button
          class="yc-button yc-button_view_normal yc-button_size_m yc-button_pin_round-round _btn__with-icon_212512 _final-avatar__buttons_80dffb"
          type="button"
        >
          <span
            class="yc-button__text"
          >
            <div
              class="_btn__wrapper_212512"
            >
              <svg
                aria-hidden="true"
                class="yc-icon"
                fill="currentColor"
                height="16"
                stroke="none"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12.238 3.64a1.854 1.854 0 0 0-1.629-1.628l-.8.8a3.367 3.367 0 0 1 1.63 1.628l.799-.8ZM4.74 7.88l3.87-3.868a1.854 1.854 0 0 1 1.628 1.629L6.369 9.51a1.5 1.5 0 0 1-.814.418l-1.48.247.247-1.48a1.5 1.5 0 0 1 .418-.814ZM9.72.78l-2 2-4.04 4.04a3 3 0 0 0-.838 1.628L2.48 10.62a1 1 0 0 0 1.151 1.15l2.17-.36a3 3 0 0 0 1.629-.839l4.04-4.04 2-2c.18-.18.28-.423.28-.677A3.353 3.353 0 0 0 10.397.5c-.254 0-.498.1-.678.28ZM2.75 13a.75.75 0 0 0 0 1.5h10.5a.75.75 0 0 0 0-1.5H2.75Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </svg>
              change
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      class="_final-avatar_80dffb"
    >
      <input
        class="_input-load-file_80dffb"
        type="file"
      />
      <div
        class="_final-avatar_80dffb"
      >
        <img
          alt="user avatar"
          class="_final-avatar__img_80dffb"
          src="/src/entities/projects/media/defaultProjectAvatar.svg"
        />
        <button
          class="yc-button yc-button_view_normal yc-button_size_m yc-button_pin_round-round _btn__with-icon_212512 _final-avatar__buttons_80dffb"
          type="button"
        >
          <span
            class="yc-button__text"
          >
            <div
              class="_btn__wrapper_212512"
            >
              <svg
                aria-hidden="true"
                class="yc-icon"
                fill="currentColor"
                height="16"
                stroke="none"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8 1.75a.75.75 0 0 1 .75.75v4.75h4.75a.75.75 0 0 1 0 1.5H8.75v4.75a.75.75 0 0 1-1.5 0V8.75H2.5a.75.75 0 0 1 0-1.5h4.75V2.5A.75.75 0 0 1 8 1.75Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </svg>
              add
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;
